--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "env-typescript",
   "version": "1.0.0-alpha.1",
   "description": "",
-  "types": "/src/index.d.ts",
+  "main":"",
+  "types": "index.d.ts",
   "keywords": [],
   "author": "bedrock-apis",
   "license": "MIT",
