--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "noImplicitAny": true,
     "noEmit": true,
   },
-  "include": ["types/**/*.d.ts"],
+  "include": ["lib/**/*.d.ts", "./index.d.ts"]
 }
