--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   ],
   "author": "bedrock-apis",
   "license": "MIT",
-  "packageManager": "pnpm@10.20.0"
+  "packageManager": "pnpm@10.20.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bedrock-apis/env-types.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bedrock-apis/env-types/issues"
+  },
+  "homepage": "https://github.com/bedrock-apis/env-types#readme"
 }
