--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "./package.json"
   ],
   "author": "bedrock-apis",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "packageManager": "pnpm@10.20.0",
   "repository": {
     "type": "git",
